# ada-example

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-x64-windows-static-md.bat  build-x64-windows-static.bat  build-x64-windows.bat  build-x86-windows-static-md.bat  build-x86-windows-static.bat  build-x86-windows.bat  pctutil.cpp  vcpkg.json
